# pleiodb

./: .gitignore  CONTEXT.md  README.md  environment.yml  ingestion_plan.txt  pyproject.toml  specification.md
.claude/: settings.json
docs/: _quarto.yml  imputation_regional.qmd  index.qmd  query_benchmark.qmd  rho_examine.qmd
issues/: 028-estimate-rho-cml-pure-function.md  029-build-rho-storage.md  030-gwas-database-rename-info-warning.md  031-pleiodb-rho-compute-command.md  032-pleiodb-rho-query-mode.md  033-imputation-kernel.md  034-ld-block-index.md  035-impute-z-block-api.md  036-build-integration.md  037-lift-variants-utility.md  038-build-pipeline-liftover-wiring.md  039-store-hg38-alids-in-variants-tsv.md  040-integration-tests-liftover-imputation.md  041-post-build-imputation-pass.md  042-five-trait-consistency-trial.md  043-quarto-imputation-performance-docs.md  044-vcf-paths-in-traits-tsv.md  045-read-vcf-region-function.md  046-block-tsv-allele-lookup.md  047-dense-imputation-worker.md  048-wire-dense-imputation-pass.md  049-liftover-for-region-queries.md  050-cli-ld-vcf-threads.md  051-pleiodbr-package-scaffold.md  052-pleiodbr-chunk-reader.md  053-pleiodbr-phewas.md  054-pleiodbr-gwas.md  055-pleiodbr-tophits.md  056-pleiodbr-associations.md  057-pleiodbr-rho.md  058-pleiodbr-tests-and-fixture.md  prd-dense-vcf-imputation.md  prd-hg38-liftover-variants.md  prd-imputation-performance.md  prd-pleiodbr.md  prd-rho-matrix.md  prd.md
notebooks/: validate_reconstruction.ipynb
scratch/: imputation_benchmark.html  imputation_benchmark.qmd  mr_controls.qmd  (+1 more)
(+51 files in other folders)
