[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pleiodb"
version = "0.1.0"
description = "Compact storage and query tool for large-scale GWAS summary statistics"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.9",
    "zstandard>=0.21",
    "click>=8.0",
    "cyvcf2>=0.30",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
liftover = [
    "pyliftover>=0.4",
]
dev = [
    "pytest>=7.0",
    "pytest-benchmark",
]

[project.scripts]
pleiodb = "pleiodb.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pleiodb"]
